--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conoce mas sobre nosotros</title>
+    <title>SNK | Conoce mas sobre nosotros</title>
     <meta name="description" content="Estamos comprometidos con nuestro cliente, tu satisfaccion es nuestra satisfaccion.">
     <meta name="keywords" content="SNK, Tienda, Zapatillas, Precio, Calidad, Envio Gratis, La Plata, Adidas, Nike, Puma, Topper, Reebok, Under Armour, Crocs, Asics, John Foos, Head, Kappa, Lacoste, New Balance, Reef, Reusch, Umbro, Vans, Wilson, Running, Entrenamiento, Moda, Stock, Cambios, Devoluciones">
     <!-- Favicon -->
@@ -41,7 +41,7 @@
                                 <a class="nav-link mx-4 subrayadoEnlace" href="tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 subrayadoEnlace" href="nosotros.html">Nosotros</a>
+                                <a class="activo nav-link mx-4 subrayadoEnlace" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-4 subrayadoEnlace" href="preguntasFrecuentes.html">Faq's</a>
@@ -228,13 +228,18 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="d-flex justify-content-around">
-                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank"><i
-                                    class="fa-brands fa-facebook"></i></a>
-                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                            <a class="efectoIcono" href="https://twitter.com/" target="_blank"><i
-                                    class="fa-brands fa-twitter-square"></i></a>
-                            <a class="efectoIcono" href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
+                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://twitter.com/" target="_blank">
+                                <i class="fa-brands fa-twitter-square"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://youtube.com/" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -252,7 +257,7 @@
                                 <a href="tienda.html">Tienda</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="nosotros.html">Nosotros</a>
+                                <a class="activo" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="preguntasFrecuentes.html">faq's</a>
