--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preguntas Frecuentes</title>
+    <title>SNK | Preguntas Frecuentes</title>
     <meta name="description" content="Si tenes alguna duda, consulta nuestro listado de preguntas frecuentes.">
     <meta name="keywords" content="SNK, Tienda, Zapatillas, Precio, Calidad, Envío Gratis, La Plata, Adidas, Nike, Puma, Topper, Reebok, Under Armour, Crocs, Asics, John Foos, Head, Kappa, Lacoste, New Balance, Reef, Reusch, Umbro, Vans, Wilson, Running, Entrenamiento, Moda, Stock, Cambios, Devoluciones">
     <!-- Favicon -->
@@ -44,7 +44,7 @@
                                 <a class="nav-link mx-4 subrayadoEnlace" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 subrayadoEnlace" href="preguntasFrecuentes.html">Faq's</a>
+                                <a class="activo nav-link mx-4 subrayadoEnlace" href="preguntasFrecuentes.html">Faq's</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-4 subrayadoEnlace" href="contacto.html">Contacto</a>
@@ -183,11 +183,11 @@
                     </div>
                 </div>
                 <div class="preguntas__respuesta">
-                    <h3>¿Como realizo un cambio?</h3>
+                    <h3>¿Cómo realizo un cambio?</h3>
                     <p>Realizar cambios y devoluciones es muy sencillo. Podés acercarte a nuestro locales con el producto en perfecto estado y la factura recibida. Tené en cuenta que en el local sólo se cambia por la misma prenda o el valor abonado. Si no podes acercarte a nuestros locales podes hacer el cambio online siguiendo los pasos que explicamos mas adelante.<br>Compras correspondientes al Interior del país: SOLO CAMBIO ONLINE. En caso que residas en el interior de la República Argentina, podemos hacer el cambio por correo directamente en tu domicilio. Para gestionarlo contactate con nosotros dentro de los 30 días corridos posteriores a la recepción del pedido a travesde nuestro whatsapp.</p>
                 </div>
                 <div class="preguntas__respuesta">
-                    <h3>¿Como se realiza el cambio online?</h3>
+                    <h3>¿Cómo se realiza el cambio online?</h3>
                     <p>-Escribinos por whatsapp.<br>- En el mensaje envianos tu número de pedido, el artículo que deseas cambiar y por cuál. En caso de ser necesario adjuntar fotos.<br>- Una vez aprobado el cambio, dentro de los siguientes 10 días hábiles Correo Argentino pasará a retirar el producto por tu domicilio y en el mismo momento entregará la nueva unidad.
                     </p>
                 </div>
@@ -307,7 +307,7 @@
                     </p>
                 </div>
                 <div class="preguntas__respuesta">
-                    <h3>¿Como hago para conocer mi talle?</h3>
+                    <h3>¿Cómo hago para conocer mi talle?</h3>
                     <p>Para determinar tu talle tene en cuenta la siguiente tabla:</p>
                 </div>
                 <div class="preguntas__tabla">
@@ -467,13 +467,18 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="d-flex justify-content-around">
-                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank"><i
-                                    class="fa-brands fa-facebook"></i></a>
-                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                            <a class="efectoIcono" href="https://twitter.com/" target="_blank"><i
-                                    class="fa-brands fa-twitter-square"></i></a>
-                            <a class="efectoIcono" href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
+                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://twitter.com/" target="_blank">
+                                <i class="fa-brands fa-twitter-square"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://youtube.com/" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -494,7 +499,7 @@
                                 <a href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="preguntasFrecuentes.html">faq's</a>
+                                <a class="activo" href="preguntasFrecuentes.html">faq's</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="contacto.html">Contacto</a>
