--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto d-flex align-items-center mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link mx-4 subrayadoEnlace" href="index.html">Inicio</a>
+                                <a class="activo nav-link mx-4 subrayadoEnlace" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-4 subrayadoEnlace" href="pages/tienda.html">Tienda</a>
@@ -75,7 +75,7 @@
                         <div class="antes">
                             <div class="linea linea__uno"></div>
                         </div>
-                        <h2 class="titulo">Porque comprar en snk</h2>
+                        <h2 class="titulo">Por que comprar en snk</h2>
                         <div class="despues">
                             <div class="linea linea__dos"></div>
                         </div>
@@ -225,13 +225,18 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="d-flex justify-content-around">
-                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank"><i
-                                    class="fa-brands fa-facebook"></i></a>
-                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                            <a class="efectoIcono" href="https://twitter.com/" target="_blank"><i
-                                    class="fa-brands fa-twitter-square"></i></a>
-                            <a class="efectoIcono" href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
+                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://twitter.com/" target="_blank">
+                                <i class="fa-brands fa-twitter-square"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://youtube.com/" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +248,7 @@
                     <nav class="navFooter text-center">
                         <ul class="d-flex flex-column flex-lg-row align">
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="index.html">Inicio</a>
+                                <a class="activo" href="index.html">Inicio</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="pages/tienda.html">Tienda</a>
