--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactate con nosotros</title>
+    <title>SNK | Contactate con nosotros</title>
     <meta name="description" content="Tu opinion nos interesa, dejanos tu comentario o consulta, y te brindaremos una pronta respuesta">
     <meta name="keywords" content="SNK, Tienda, Zapatillas, Precio, Calidad, Envio Gratis, La Plata, Adidas, Nike, Puma, Topper, Reebok, Under Armour, Crocs, Asics, John Foos, Head, Kappa, Lacoste, New Balance, Reef, Reusch, Umbro, Vans, Wilson, Running, Entrenamiento, Moda, Stock, Cambios, Devoluciones">
     <!-- Favicon -->
@@ -13,8 +13,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Estilos CSS -->
@@ -50,7 +49,7 @@
                                 <a class="nav-link mx-4 subrayadoEnlace" href="preguntasFrecuentes.html">Faq's</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 subrayadoEnlace" href="contacto.html">Contacto</a>
+                                <a class="activo nav-link mx-4 subrayadoEnlace" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
                         <form class="buscador d-flex" role="search">
@@ -115,12 +114,14 @@
             </div>
         </section>
     </main>
+    <!-- Icono Whatsapp -->
     <div class="contenedorWhatsapp sombraWhatsapp">
         <a href="https://wa.me/1234567891?text=SNK%20|%20Tienda%20de%20zapatillas.%20Hacenos%20una%20consulta%20y%20te%20respondemos%20a%20la%20brevedad"
             target="_blank">
             <img src="../assets/images/iconos/whatsapp.png" class="botonWhatsapp" alt="Whatsapp">
         </a>
     </div>
+    <!-- Footer -->
     <footer class="row d-flex justify-content-center align-items-center py-3 pie">
         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-3 d-flex justify-content-around order-2 order-lg-1">
             <div class="redes d-flex flex-column justify-content-center">
@@ -134,13 +135,18 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="d-flex justify-content-around">
-                            <a href="https://www.facebook.com/" target="_blank"><i
-                                    class="fa-brands fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                            <a href="https://twitter.com/" target="_blank"><i
-                                    class="fa-brands fa-twitter-square"></i></a>
-                            <a href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
+                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://twitter.com/" target="_blank">
+                                <i class="fa-brands fa-twitter-square"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://youtube.com/" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -151,20 +157,20 @@
                 <div class="d-flex justify-content-around">
                     <nav class="navFooter text-center">
                         <ul class="d-flex flex-column flex-lg-row align">
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="../index.html">Inicio</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="tienda.html">Tienda</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="nosotros.html">Nosotros</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="preguntasFrecuentes.html">faq's</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
-                                <a href="contacto.html">Contacto</a>
+                            <li class="my-1 mx-4 subrayadoEnlace">
+                                <a class="activo" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </nav>
