--- a/pages/productos/underArmour.html
+++ b/pages/productos/underArmour.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link mx-4 subrayadoEnlace" href="../../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 subrayadoEnlace" href="../tienda.html">Tienda</a>
+                                <a class="activo nav-link mx-4 subrayadoEnlace" href="../tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-4 subrayadoEnlace" href="../nosotros.html">Nosotros</a>
@@ -605,7 +605,7 @@
                                 <a href="../../index.html">Inicio</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="../tienda.html">Tienda</a>
+                                <a class="activo" href="../tienda.html">Tienda</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="../nosotros.html">Nosotros</a>
