--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -13,8 +13,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <!-- Estilos CSS -->
@@ -39,7 +38,7 @@
                                 <a class="nav-link mx-4 subrayadoEnlace" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 subrayadoEnlace" href="tienda.html">Tienda</a>
+                                <a class="activo nav-link mx-4 subrayadoEnlace" href="tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-4 subrayadoEnlace" href="nosotros.html">Nosotros</a>
@@ -580,13 +579,18 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="d-flex justify-content-around">
-                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank"><i
-                                    class="fa-brands fa-facebook"></i></a>
-                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                            <a class="efectoIcono" href="https://twitter.com/" target="_blank"><i
-                                    class="fa-brands fa-twitter-square"></i></a>
-                            <a class="efectoIcono" href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
+                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://twitter.com/" target="_blank">
+                                <i class="fa-brands fa-twitter-square"></i>
+                            </a>
+                            <a class="efectoIcono" href="https://youtube.com/" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -601,7 +605,7 @@
                                 <a href="../index.html">Inicio</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="tienda.html">Tienda</a>
+                                <a class="activo" href="tienda.html">Tienda</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="nosotros.html">Nosotros</a>
