Reconfigure node y agregue .htaccess

--- a/pages/productos/nike.html
+++ b/pages/productos/nike.html
@@ -542,7 +542,7 @@
                     <a class="page-link" href="../tienda.html#adidas">1</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="nike.html#nike">2</a>
+                    <a class="activoPagination page-link" href="nike.html#nike">2</a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" href="puma.html#puma">3</a>
