--- a/pages/productos/puma.html
+++ b/pages/productos/puma.html
@@ -545,7 +545,7 @@
                     <a class="page-link" href="nike.html#nike">2</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="puma.html#puma">3</a>
+                    <a class="activoPagination page-link" href="puma.html#puma">3</a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" href="topper.html#topper">4</a>
