--- a/pages/productos/topper.html
+++ b/pages/productos/topper.html
@@ -548,7 +548,7 @@
                     <a class="page-link" href="puma.html#puma">3</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="topper.html#topper">4</a>
+                    <a class="activoPagination page-link" href="topper.html#topper">4</a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" href="underArmour.html#under">5</a>
