--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -539,7 +539,7 @@
                     <a class="page-link" href="#">Anterior</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="tienda.html#adidas">1</a>
+                    <a class="activoPagination page-link" href="tienda.html#adidas">1</a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" href="productos/nike.html#nike">2</a>
