--- a/pages/productos/underArmour.html
+++ b/pages/productos/underArmour.html
@@ -551,7 +551,7 @@
                     <a class="page-link" href="topper.html#topper">4</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="underArmour.html#under">5</a>
+                    <a class="activoPagination page-link" href="underArmour.html#under">5</a>
                 </li>
                 <li class="page-item disabled">
                     <a class="page-link" href="#">Siguiente</a>
