Agregue sitemap y cambie formato imagenes portadas de jpg a webp

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,7 +22,7 @@
 
 <body class="contenedorGrid container-fluid">
     <!-- Header -->
-    <header class="row headerPaginas" style="background-image: url(../assets/images/portadas/portada-contacto.jpg)">
+    <header class="row headerPaginas" style="background-image: url(../assets/images/portadas/portada-contacto.webp)">
         <div>
             <nav class="navbar navbar-expand-lg row" style="z-index: 2;">
                 <div class="container-fluid">
