--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="container-fluid">
     <!-- Header -->
-    <header class="row headerIndex" style="background-image: url(assets/images/portadas/portada-index.jpg);">
+    <header class="row headerIndex" style="background-image: url(assets/images/portadas/portada-index.webp);">
         <div>
             <nav class="navbar navbar-expand-lg row" style="z-index: 2;">
                 <div class="container-fluid">
