--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -22,7 +22,7 @@
 
 <body class="contenedorGrid container-fluid">
     <!-- Header -->
-    <header class="row headerPaginasFaqs" style="background-image: url(../assets/images/portadas/portada-preguntas.jpg)">
+    <header class="row headerPaginasFaqs" style="background-image: url(../assets/images/portadas/portada-preguntas.webp)">
         <div>
             <nav class="navbar navbar-expand-lg row" style="z-index: 2;">
                 <div class="container-fluid">
